Fix zooming on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-width: 500px;
-}
-
-* {
-  box-sizing: border-box;
+  transform: scale(0.8);
+  transform-origin: top left;
 }
 
 code {
